Perma js/src/jit-test/tests/gc/bug-1643913.js | Error: Invalid long option: --no-ti (code 1, args "--enable-weak-refs --no-ti") [0.0 s] when Gecko 79 merges to Beta on 2020-06-29
Categories
(Core :: JavaScript: GC, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| thunderbird_esr68 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | + | verified |
People
(Reporter: aryx, Assigned: jonco)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
47 bytes,
text/x-phabricator-request
|
Details |
[Tracking Requested - why for this release]:
central-as-beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&selectedTaskRun=f-PQE2F3Qha6yIka1e2TRQ-0&resultStatus=testfailed%2Cbusted%2Cexception&revision=09ee4be5cc8391808c4f6c132a9733bfb2d9c99f
Log: https://treeherder.mozilla.org/logviewer.html#?job_id=305597199&repo=try
TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/gc/bug-1643913.js | Error: Invalid long option: --no-ti (code 1, args "--enable-weak-refs --no-ti") [0.0 s]
TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/gc/bug-1643913.js | Error: Invalid long option: --no-ti (code 1, args "--enable-weak-refs --no-ti --ion-eager --ion-offthread-compile=off --more-compartments") [0.0 s]
TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/gc/bug-1643913.js | Error: Invalid long option: --no-ti (code 1, args "--enable-weak-refs --no-ti --ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [0.0 s]
TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/gc/bug-1643913.js | Error: Invalid long option: --no-ti (code 1, args "--enable-weak-refs --no-ti --baseline-eager") [0.0 s]
TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/gc/bug-1643913.js | Error: Invalid long option: --no-ti (code 1, args "--enable-weak-refs --no-ti --no-blinterp --no-baseline --no-ion --more-compartments") [0.0 s]
TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/gc/bug-1643913.js | Error: Invalid long option: --no-ti (code 1, args "--enable-weak-refs --no-ti --blinterp-eager") [0.0 s]
| Reporter | ||
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
I don't know why this test case depends on disabling TI, but it doesn't work without it. That shell option is only supported on nightly however, presumably to avoid the overhead of checking the flag all the time.
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
I rewrote the test to be much more specific, and it took a good bit of fiddling about to come up with something that worked.
I had to add a way of making gcslice only trigger a slice during an incremental collection, otherwise this can end up looping forever.
| Assignee | ||
Updated•5 years ago
|
Comment 5•5 years ago
|
||
| bugherder | ||
Comment 6•5 years ago
|
||
Verified fixed in today's central-as-beta simulations:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=52c8ccce318257d20291ef15e4b07eb667d5d6f8&searchStr=sm&group_state=expanded
https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&revision=6fce1854cf85004b1cf46ec1983a9cac12478942&searchStr=sm
Updated•4 years ago
|
Updated•4 years ago
|
Description
•