Bug 1644393 - Fix test case to work in beta/release builds r=sfink

This changes the test to be much more specific.

It adds a way of making gcslice only trigger a slice during an incremental collection, without which the collection loop can loop forever.

Differential Revision: https://phabricator.services.mozilla.com/D79136